# rust-haskell-ffi

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-haskell-ffi.cabal
src/: main.rs
src-lib/: Safe.hs
